Conversion of Wiki to Jekyll - Journal Scroll Bars * Issues Fixed   * #4: Remove 'print page' widget   * #5: Remove 'COMMENTS' widget   * #9: Investigate removal of miscellaneous pages   * #10: Empty page: https://dfhawthorne.github.io/file-cabinet.html   * #12: Remove Google Analytics code   * #14: Files still missing after issue #6 fixed   * #15: Pages show message "You do not have permission to add comments."   * #22: Title Bar Overflows into Content * Further Discussion of Creating Auxiliary Functions * Converted first page with journal scroll bars   * Fixed scroll bar include file

--- a/docs/_sass/_page_title.scss
+++ b/docs/_sass/_page_title.scss
@@ -1,10 +1,10 @@
 .page-title {
-    height: 48px;
+    min-height: 48px;
     padding: 8px;
     color: #333;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
-    font-size: 40px;
+    font-size: 20px;
     margin :auto;
     width: 100%;
     grid-row: 2;
